--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
   <div id="app">
-    <h1>テストです</h1>
+    <h1>テストです。</h1>
   </div>
   <!-- script -->
   <script src="JS/script.js"></script>
